--- a/style.css
+++ b/style.css
@@ -69,18 +69,28 @@ box-shadow: 0px 0px 11px 5px rgba(101,212,146,1);
     margin-top: 20px;
 }
 
-
-
-
-
 .attribution {
+    position: absolute;
     font-size: 11px; 
     text-align: center;    
     color: white;
-    margin-top: 50%;
+    bottom: 10px;
+
 }
 
 .attribution a { 
     color: hsl(228, 86%, 66%); 
 
+}
+
+@media (min-width: 600px) {
+   .card {
+    width: 450px;
+    height: 330px;
+    margin-top: 220px;
+   } 
+
+   .dices {
+    transform: translate(192px, 138px);
+   }
 }
