--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     font-family: 'Manrope', sans-serif;
 }
 
-.card {
+main {
     background-color: var(--dk-gray-blue);
     position: relative;
     min-height: 270px;
@@ -76,7 +76,7 @@ box-shadow: 0px 0px 11px 5px rgba(101,212,146,1);
     margin-top: 20px;
 }
 
-.attribution {
+footer {
     position: absolute;
     font-size: 11px; 
     text-align: center;    
@@ -85,13 +85,13 @@ box-shadow: 0px 0px 11px 5px rgba(101,212,146,1);
 
 }
 
-.attribution a { 
+footer a { 
     color: hsl(228, 86%, 66%); 
 
 }
 
 @media (min-width: 600px) {
-   .card {
+   main {
     width: 450px;
     height: 330px;
     margin-top: 220px;
