--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 main {
     background-color: var(--dk-gray-blue);
     position: relative;
-    min-height: 270px;
+    min-height: 330px;
     width: 90%;
     margin-top: 120px;
     border-radius: 10px;
@@ -92,9 +92,11 @@ footer a {
 
 @media (min-width: 600px) {
    main {
-    width: 450px;
+    width: 550px;
     height: 330px;
     margin-top: 220px;
+    border-radius: 15px;
+    font-size: 1.1rem;
    } 
 
    .dices {
@@ -103,7 +105,7 @@ footer a {
    }
 
 h2 {
-    padding: 0 30px;
+    padding: 0 50px;
 }
 .divider-one {
     margin-top: 40px;
